--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,5 @@ License: CC0
 Encoding: UTF-8
 LazyData: true
 ByteCompile: true
+URL: https://github.com/gadenbuie/ggpomological
+BugReports: https://github.com/gadenbuie/ggpomological/issues
