Add plain theme and restyle theme_pomological a bit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,4 @@ export(scale_colour_pomological)
 export(scale_fill_pomological)
 export(theme_pomological)
 export(theme_pomological_nobg)
+export(theme_pomological_plain)
