--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(scale_color_pomological)
 export(scale_colour_pomological)
 export(scale_fill_pomological)
 export(theme_pomological)
+export(theme_pomological_fancy)
 export(theme_pomological_nobg)
 export(theme_pomological_plain)
